--- a/src/components/Footer.astro
+++ b/src/components/Footer.astro
@@ -37,10 +37,10 @@ const { noMarginTop = false } = Astro.props;
     </nav>
 
     <!-- Copyright -->
-    <div class="text-center text-sm text-gray-600 dark:text-gray-400">
-      <span>Copyright © {currentYear}</span>
-      <span class="hidden sm:inline mx-2">|</span>
-      <span>All rights reserved.</span>
-    </div>
-  </div>
+<div class="text-center text-sm text-gray-600 dark:text-gray-400">
+  <span>Copyright © {currentYear} ReviByte</span>
+  <span class="hidden sm:inline mx-2">|</span>
+  <span>All rights reserved.</span>
+</div>
+</div>
 </footer>
