--- a/src/layouts/Layout.astro
+++ b/src/layouts/Layout.astro
@@ -1,6 +1,6 @@
 ---
 import { ClientRouter } from "astro:transitions";
-import { PUBLIC_GOOGLE_SITE_VERIFICATION } from "astro:env/client";
+import { PUBLIC_GOOGLE_SITE_VERIFICATION, PUBLIC_BING_SITE_VERIFICATION } from "astro:env/client";
 import { SITE } from "@/config";
 import "@/styles/global.css";
 
@@ -96,6 +96,10 @@ const pageTitle = title === SITE.title ? title : `${title} | ${SITE.title}`;
 
     {PUBLIC_GOOGLE_SITE_VERIFICATION && (
       <meta name="google-site-verification" content={PUBLIC_GOOGLE_SITE_VERIFICATION} />
+    )}
+
+    {PUBLIC_BING_SITE_VERIFICATION && (
+      <meta name="msvalidate.01" content={PUBLIC_BING_SITE_VERIFICATION} />
     )}
 
     <!-- Google AdSense Auto Ads -->
